# aoc

./: README.md
aoc2019/: LICENSE  README.md
aoc2019/day1/: day1_test.go
aoc2019/day10/: day10.go
aoc2019/day2/: intcode.go
aoc2019/day3/: panelUtils.go  util.go
aoc2019/day5/: day5_test.go  intcode.go  parseInput.go
aoc2019/day6/: treeUtils.go
aoc2019/day8/: day8.go
aoc2019/day9/: day9.go
aoc2019/intcode/: intcode.go
aoc2019/readFile/: readFile.go
aoc2020/: .flake8  README.md  noxfile.py  pyproject.toml
aoc2020/src/aoc2020/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  timer.py
aoc2020/tests/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
aoc2022/: .gitignore  Makefile  README.md  go.mod
aoc2022/cmd/aoc2022/: main.go
aoc2022/internal/pkg/command/: root.go
aoc2022/internal/pkg/days/: day1.go  day1_test.go  day2.go  day2_test.go  day3.go  day3_test.go  day4.go  day4_test.go  day5.go  day5_test.go  day6.go  day6_test.go  day7.go  day7_test.go
aoc2022/internal/pkg/filereader/: filereader.go
aoc2022/internal/pkg/runner/: day1.go  day2.go  day3.go  day4.go  day5.go  day6.go  day7.go
aoc2022/internal/pkg/utils/day7/: fs.go
aoc2024/: CHANGELOG.md  Makefile  README.md  go.mod  main.go
aoc2024/cmd/: root.go
day1/: day1.go  day1_test.go  fuelConsumption.go
day2/: day2.go  day2_test.go  intcode.go
day3/: day3.go  day3_test.go  intersection.go  panelUtils.go  pointUtils.go
day4/: day4.go  day4_test.go  utils.go
day5/: day5.go
day6/: day6.go
day7/: day7.go  intcode.go
readFile/: readFile.go
