[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = "Advent of Code (adventofcode.com) project for 2020"
authors = ["Georgios Petrousis"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gpetrousis/aoc/aoc2020"
repository = "https://github.com/gpetrousis/aoc/aoc2020"
keywords = ["aoc", "adventofcode"]

[tool.poetry.scripts]
day1 = "aoc2020.day_1:main"
day2 = "aoc2020.day_2:main"
day3 = "aoc2020.day_3:main"
day4 = "aoc2020.day_4:main"
day5 = "aoc2020.day_5:main"
day6 = "aoc2020.day_6:main"
day7 = "aoc2020.day_7:main"
day8 = "aoc2020.day_8:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"
coverage = {version = "^5.3", extras = ["toml"]}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aoc2020"]

[tool.coverage.report]
show_missing = true