[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = "Advent of Code (adventofcode.com) project for 2020"
authors = ["Georgios Petrousis"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gpetrousis/aoc/aoc2020"
repository = "https://github.com/gpetrousis/aoc/aoc2020"
keywords = ["aoc", "adventofcode"]

[tool.poetry.scripts]
day1 = "aoc2020.day_1:main"
day2 = "aoc2020.day_2:main"
day3 = "aoc2020.day_3:main"
day4 = "aoc2020.day_4:main"
day5 = "aoc2020.day_5:main"
day6 = "aoc2020.day_6:main"
day7 = "aoc2020.day_7:main"
day8 = "aoc2020.day_8:main"
day9 = "aoc2020.day_9:main"
day10 = "aoc2020.day_10:main"
day11 = "aoc2020.day_11:main"
day12 = "aoc2020.day_12:main"
day13 = "aoc2020.day_13:main"
day14 = "aoc2020.day_14:main"
day15 = "aoc2020.day_15:main"
day16 = "aoc2020.day_16:main"
day17 = "aoc2020.day_17:main"
day18 = "aoc2020.day_18:main"
day19 = "aoc2020.day_19:main"
day20 = "aoc2020.day_20:main"
day21 = "aoc2020.day_21:main"
day22 = "aoc2020.day_22:main"
day23 = "aoc2020.day_23:main"
day24 = "aoc2020.day_24:main"
day25 = "aoc2020.day_25:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.2.0"
pylint = "^3.2.0"
coverage = {version = "^7.5", extras = ["toml"]}
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aoc2020"]

[tool.coverage.report]
show_missing = true